// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQDVFwvhSo3DYRGL6OFXc-vhTaYyHGLxI6n2sH8agmrrZN_H"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBLMoI5e1FHQegWhvYP2xeTMc7qtKLzJg6pmTHwmPv3oqRA"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQDf_SuxJ5jfmcfVh1y0nt6Re20qiqJXjo5ab1Yc3cU58qe1"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDVFwvhSo3DYRGL6OFXc-vhTaYyHGLxI6n2sH8agmrrZN_H",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15361n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDVFwvhSo3DYRGL6OFXc-vhTaYyHGLxI6n2sH8agmrrZN_H",
            "to": "kQBLMoI5e1FHQegWhvYP2xeTMc7qtKLzJg6pmTHwmPv3oqRA",
            "type": "internal",
            "value": 9970538000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDVFwvhSo3DYRGL6OFXc-vhTaYyHGLxI6n2sH8agmrrZN_H",
          "to": "kQBLMoI5e1FHQegWhvYP2xeTMc7qtKLzJg6pmTHwmPv3oqRA",
          "type": "internal",
          "value": 9970538000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13882n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBLMoI5e1FHQegWhvYP2xeTMc7qtKLzJg6pmTHwmPv3oqRA",
            "to": "kQDf_SuxJ5jfmcfVh1y0nt6Re20qiqJXjo5ab1Yc3cU58qe1",
            "type": "internal",
            "value": 9946657000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBLMoI5e1FHQegWhvYP2xeTMc7qtKLzJg6pmTHwmPv3oqRA",
          "to": "kQDf_SuxJ5jfmcfVh1y0nt6Re20qiqJXjo5ab1Yc3cU58qe1",
          "type": "internal",
          "value": 9946657000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13810n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDf_SuxJ5jfmcfVh1y0nt6Re20qiqJXjo5ab1Yc3cU58qe1",
            "to": "kQDf_SuxJ5jfmcfVh1y0nt6Re20qiqJXjo5ab1Yc3cU58qe1",
            "type": "internal",
            "value": 9923036000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDf_SuxJ5jfmcfVh1y0nt6Re20qiqJXjo5ab1Yc3cU58qe1",
          "to": "kQDf_SuxJ5jfmcfVh1y0nt6Re20qiqJXjo5ab1Yc3cU58qe1",
          "type": "internal",
          "value": 9923036000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4362n,
      },
    ],
  },
]
`;
